Updated new repo and revisedCSP1

--- a/sampleworks.html
+++ b/sampleworks.html
@@ -56,93 +56,64 @@
 </section>
 
 <section id="services">
-	<div class="container">
-		<div><h2 class="display-4 text-center my-5">OUR SERVICES</h2></div>
-	</div>
-</section>
-
-<section id="servicesdetails">
-	<div class="container">
-		<div class="row features">
-			<div class="col-md-7 mt-5">
-				<h2 class="featureheading">COFFEE BOOK PACKAGE.</h2>
-				<p class="lead">For those who want to capture their work and save the memory like a pro, this one's for you.
-				You'll get a personalized coffee book lay out that you can show-off to your friends and family.</p>
-				<ul class="list-group text-center">
-					<li class="list-group-item">On-site /In-Studio shoot</li>
-					<li class="list-group-item">Themed set photos</li>
-					<li class="list-group-item">Lay out consultation</li>
-				</ul>
-			</div>
-			<div class="col-md-5 my-5">
-				<img class="featureimage img-fluid mx-auto" src="assets/img/foodphotography1.jpg">
-			</div>
-		</div>
-
-		<hr>
-
-		<div class="row features">
-			<div class="col-md-7 order-md-2 my-5">
-				<h2 class="featureheading">DIGITAL CONTENT PACKAGE.</h2>
-				<p class="lead">Looking for ways to boost your mouth-watering food to your patrons? We'll help you not just to capture
-				thos delicious meals in your kitchen, but we'll also advise you to get started in marketing through	your social media platforms.</p>
-				<ul class="list-group text-center">
-					<li class="list-group-item">On-site /In-Studio shoot</li>
-					<li class="list-group-item">Written Content</li>
-					<li class="list-group-item">Social Media Networking</li>
-				</ul>
-			</div>
-			<div class="col-md-5 order-md-1 my-5">
-				<img class="featureimage img-fluid mx-auto" src="assets/img/foodstyling1.jpg">
-
-			</div>
-		</div>
-
-		<hr>
-
-		<div class="row features">
-			<div class="col-md-7 my-5">
-				<h2 class="featureheading">MOTION GRAPHIC PACKAGE.</h2>
-				<p class="lead">Taking your food photos to the next level has never looked this good! We can provide stop motion friendly
-				set of photos that are in trend to make sure that you can capture the attention of your prospect customers.</p>
-				<ul class="list-group text-center">
-					<li class="list-group-item">On-site /In-Studio shoot</li>
-					<li class="list-group-item">Retouching and Color Correction</li>
-					<li class="list-group-item">Photos for 15-seconder stop motion videos</li>
-				</ul>
-			</div>
-			<div class="col-md-5 my-5">
-				<img class="featureimage img-fluid mx-auto" src="assets/img/propstyling1.jpg">
-
-			</div>
+	<div class="container-fluid">
+		<div class="col-sm-12">
+			<div><h2 class="display-4 text-center my-5">SAMPLE WORKS</h2></div>
 		</div>
 	</div>
 </section>
 
-
-<section id="rates">
-	<div class="container">
-		<div class="row">
-			<div class="col-sm-12 col-md-12 col-lg-12 text-center">
-				<h2 class="display-4 text-center mt-5 mb-2">OUR RATES</h2>
-				<div class="pwyw">
-					<h1>PWYW</h1>
-					<p class="lead mb-5" id="pwywcontent">Here, we value the quality we deliver to our clients so we give them the freedom to determine if the result 
-						gets their money's worth so we implement a <span class="pwyw"><em>"Pay what you want system".</em></span> Basically, it's up to you to name the price to the project we finish for you, no questions asked.
-					</p>
-					<a href="#"><button type="button" class="btn btn-warning btn-md mb-5" id="talktous">Let's talk</button></a>
-				</div>
+<section id="gallery">
+	<div class="container-fluid gallery">
+		<div class="row gallery py-3">
+			<div class="col-sm-6 col-md-6 col-lg-3">
+				<img src="assets/img/snapseed.jpeg" class="img-fluid">
+			</div>
+			<div class="col-sm-6 col-md-6 col-lg-3">
+				<img src="assets/img/coverimage.jpg" class="img-fluid">
+			</div>
+			<div class="col-sm-6 col-md-6 col-lg-3">
+				<img src="assets/img/snapseed2.jpg" class="img-fluid">
+			</div>
+			<div class="col-sm-6 col-md-6 col-lg-3">
+				<img src="assets/img/graham.png" class="img-fluid">
+			</div>
+		</div>
+		<div class="row gallery py-3">
+			<div class="col-sm-6 col-md-6 col-lg-3">
+				<img src="assets/img/popcorn.png" class="img-fluid">
+			</div>
+			<div class="col-sm-6 col-md-6 col-lg-3">
+				<img src="assets/img/pasta.png" class="img-fluid">
+			</div>
+			<div class="col-sm-6 col-md-6 col-lg-3">
+				<img src="assets/img/tinola.png" class="img-fluid">
+			</div>
+			<div class="col-sm-6 col-md-6 col-lg-3">
+				<img src="assets/img/laing.png" class="img-fluid">
+			</div>
+		</div>
+		<div class="row gallery py-3">
+			<div class="col-sm-6 col-md-6 col-lg-3">
+				<img src="assets/img/lechon.png" class="img-fluid">
+			</div>
+			<div class="col-sm-6 col-md-6 col-lg-3">
+				<img src="assets/img/shaka.png" class="img-fluid">
+			</div>
+			<div class="col-sm-6 col-md-6 col-lg-3">
+				<img src="assets/img/burger.png" class="img-fluid">
+			</div>
+			<div class="col-sm-6 col-md-6 col-lg-3">
+				<img src="assets/img/bfast.png" class="img-fluid">
 			</div>
 		</div>
 	</div>
 </section>
-
-
 
 <section id="footer">
-	<div class="container">
+	<div class="container-fluid">
 		<div class="row">
-			<div class="col-sm-12 col-md-12 col-lg-12">
+			<div class="col-sm-12">
 				<p>Designed by Joseph Ambrosio | Copyright &copy; 2018 - PALATE STUDIO</p>
 				<div class="icons">
 					<ul class="mx-3">
