--- a/about.html
+++ b/about.html
@@ -5,11 +5,11 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<meta http-equiv="X-UA-Compatible" content="IE-Edge">
 
-	<title>AC Photography and Films</title>
+	<title>Palatestudios</title>
 
 	<!-- Favicon -->
 	<link rel="icon" type="image/x-icon" href="./favicon1.ico">
-	<link rel="shortcut icon" type="image/x-icon" href="./favicon1.ico">
+	<link rel="shortcut icon" type="image/x-icon" href="./favicon.ico">
 
 	<!-- Google Icons -->
 	<link href="https://fonts.googleapis.com/css?family=Lato|Montserrat|Oswald" rel="stylesheet">
@@ -34,7 +34,7 @@
 						<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarContent" aria-controls="navbarContent" aria-expanded="false" aria-label="Toggle navigation">
 							<span class="navbar-toggler-icon"></span>
 						</button>
-						<div class="logo">JL PHOTOGRAPHY</div>
+						<a href="index.html"><div class="logo"><img src="assets/img/logo.png" class="img-fluid" id="imglogo">PALATE STUDIO</div></a>
 						<div class="collapse navbar-collapse" id="navbarContent">
 							<ul class="navbar-nav ml-auto">
 								<li class="nav-item">
@@ -45,9 +45,6 @@
 								</li>
 								<li class="nav-item">
 									<a class="nav-link" href="sampleworks.html">Sample Works</a>
-								</li>
-								<li class="nav-item">
-									<a class="nav-link" href="contact.html">Contact</a>
 								</li>
 							</ul>
 						</div>
@@ -61,14 +58,11 @@
 <section id="about">
 	<div class="container">
 		<div class="row">
-			<div class="col-sm-3 col-md-12 col-lg-12">
-				<h1 class="display-3">Our Story</h1>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-					quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-					consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-					cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-				proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+			<div class="col-xs-3 col-sm-3 col-md-12 col-lg-12">
+				<h1 class="display-3">OUR STORY</h1>
+				<p class="story">What started as just an interest for food and photos, Mona and Cedie express their creativity in a shared passion
+					for food photography through Palate Studio. Combining their expertise from their individual careers, they merge their
+				knowledge to produce extraordinary results that tells a story.</p>
 			</div>
 		</div>
 	</div>
@@ -78,57 +72,97 @@
 	<div class="container">
 		<!-- <hr> -->
 		<div class="row first">
-			<div class="col-sm-4">
-				<img src="assets/img/me.jpg" class="img-fluid">
+			<div class="col-xs-3 col-sm-4 col-md-12 col-lg-12">
+				<img src="assets/img/mona.jpg" class="img-fluid">
 			</div>
 			<div class="col-sm-8">
 				<div class="content1">
-					<h2>Joseph Ambrosio</h2>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-						tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-						quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-					consequat.</p>
+					<h2>MONALIZA ABRIL</h2>
+					<p>After her experience in the advertising field, Mona dives in her interest for capturing the best photos that would go well
+					to her client's demands. She makes sure that the creative output balances the creator and patron's needs.</p>
 				</div>
 			</div>
 		</div>
 		
 		<div class="row second">
-			<div class="col-sm-8">
+			<div class="col-xs-3 col-sm-8">
 				<div class="content2">
-					<h2>Joseph Ambrosio</h2>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-						tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-						quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-					consequat.</p>
+					<h2>FREDERICK MARTINEZ</h2>
+					<p>After her experience in the advertising field, Mona dives in her interest for capturing the best photos that would go well
+					to her client's demands. She makes sure that the creative output balances the creator and patron's needs.</p>
 				</div>
 			</div>
 			<div class="col-sm-4">
 				<img src="assets/img/man.jpeg" class="img-fluid">
 			</div>
 		</div>
-		<!-- <hr> -->
 	</div>
 </section>
 
-<section id="footer">
-	<div class="container-fluid">
-		<div class="row">
-			<div class="col-sm-12">
-				<p>Designed by Joseph Ambrosio | Copyright &copy; 2018 - JL Photography</p>
-				<div class="icons">
-					<ul class="mx-3">
-						<li>
-							<a href=""><img src="assets/img/ig.png" class="img-fluid"></a>
-						</li>
-						<li>
-							<a href=""><img src="assets/img/mail.png" class="img-fluid"></a>
-						</li>
-					</ul>
+<section id="contact">
+	<div class="container">
+		<!-- <div class="row"> -->
+			<div class="col-xs-3 col-sm-3 col-md-12 col-lg-12">
+				<div class="contactheader">
+					<h1 class="display-3">CONTACT US</h1>
+					<p>You can also reach us through snap.palatestudio@gmail.com</p>
+					<p>For interested parties, please fill out the form below.</p>
+				</div>
+				<form>
+					<div class="form-group">
+						<label for="fullname">Full Name</label>
+						<input type="email" class="form-control" id="fullname" aria-describedby="emailHelp" placeholder="Enter your full name">
+					</div>
+					<div class="form-group">
+						<label for="eadd">Email Address</label>
+						<input type="password" class="form-control" id="eadd" placeholder="e.g. info@palatestudios.com">
+					</div>
+					<div class="form-group">
+						<label for="comment">How can we help?</label>
+						<textarea rows="8" class="form-control" id="comment" rows="3" placeholder="Let us know your thoughts!"></textarea>
+					</div>
+					<!-- Button trigger modal -->
+					<button type="button" class="btn btn-warning" data-toggle="modal" data-target="#submitinquiry">
+						Submit
+					</button>
+
+					<!-- Modal -->
+					<div class="modal fade" id="submitinquiry" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+						<div class="modal-dialog" role="document">
+							<div class="modal-content">
+								<div class="modal-header">
+									<h5 class="modal-title" id="exampleModalLabel">Thanks! This surely helps us a lot! </h5>
+									<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+										<span aria-hidden="true">&times;</span>
+									</button>
+								</div>
+							</div>
+						</div>
+					</div>
+				</form>
+			</div>
+		</div>    
+	</section>
+
+	<section id="footer">
+		<div class="container-fluid">
+			<div class="row">
+				<div class="col-sm-12">
+					<p>Designed by Joseph Ambrosio | Copyright &copy; 2018 - PALATE STUDIO</p>
+					<div class="icons">
+						<ul class="mx-3">
+							<li>
+								<a href=""><img src="assets/img/ig.png" class="img-fluid"></a>
+							</li>
+							<li>
+								<a href=""><img src="assets/img/mail.png" class="img-fluid"></a>
+							</li>
+						</ul>
+					</div>
 				</div>
 			</div>
 		</div>
-	</div>
-</section>
+	</section>
 
 
 
@@ -174,13 +208,13 @@
 
 
 
-<!-- Custom bootstrap -->
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
+	<!-- Custom bootstrap -->
+	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
 
-<!-- Custom script -->
-<script src="./assets/js/script.js"></script>
+	<!-- Custom script -->
+	<script src="./assets/js/script.js"></script>
 
 </body>
 </html>
