--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<meta http-equiv="X-UA-Compatible" content="IE-Edge">
 
-	<title>AC Photography and Films</title>
+	<title>Palatestudios</title>
 
 	<!-- Favicon -->
 	<link rel="icon" type="image/x-icon" href="./favicon1.ico">
@@ -29,12 +29,12 @@
 	<section id="navbar">
 		<div class="container-fluid">
 			<div class="row">
-				<div class="col-sm-12">
+				<div class="col-xs-12 col-sm-12">
 					<nav class="navbar navbar-expand-lg navbar-light bg-transparent">
 						<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarContent" aria-controls="navbarContent" aria-expanded="false" aria-label="Toggle navigation">
 							<span class="navbar-toggler-icon"></span>
 						</button>
-						<div class="logo">JL PHOTOGRAPHY</div>
+						<a href="index.html"><div class="logo"><img src="assets/img/logo.png" class="img-fluid" id="imglogo">PALATE STUDIO</div></a>
 						<div class="collapse navbar-collapse" id="navbarContent">
 							<ul class="navbar-nav ml-auto">
 								<li class="nav-item">
@@ -45,9 +45,6 @@
 								</li>
 								<li class="nav-item">
 									<a class="nav-link" href="sampleworks.html">Sample Works</a>
-								</li>
-								<li class="nav-item">
-									<a class="nav-link" href="contact.html">Contact</a>
 								</li>
 							</ul>
 						</div>
@@ -63,7 +60,7 @@
 		<div class="row">
 			<div class="col-sm-12">
 				<div class="content">
-					<img src="assets/img/landingpage.jpg" class="img-fluid">
+					<img src="assets/img/coverimage.jpg" class="img-fluid">
 					<h2>Title</h2>
 					<p class="lead">This is a sample description</p>
 					<a href="#"><button type="button" class="btn btn-warning btn-md" id="talktous">Talk to us</button></a>
@@ -77,7 +74,7 @@
 	<div class="container-fluid">
 		<div class="row">
 			<div class="col-sm-12">
-				<p>Designed by Joseph Ambrosio | Copyright &copy; 2018 - JL Photography</p>
+				<p>Designed by Joseph Ambrosio | Copyright &copy; 2018 - PALATE STUDIO</p>
 				<div class="icons">
 					<ul class="mx-3">
 						<li>
@@ -92,45 +89,6 @@
 		</div>
 	</div>
 </section>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 
