--- a/about.html
+++ b/about.html
@@ -70,12 +70,11 @@
 
 <section id="team">
 	<div class="container">
-		<!-- <hr> -->
 		<div class="row first">
-			<div class="col-xs-3 col-sm-4 col-md-12 col-lg-12">
+			<div class="col-xs-3 col-sm-4">
 				<img src="assets/img/mona.jpg" class="img-fluid">
 			</div>
-			<div class="col-sm-8">
+			<div class="col-xs-3 col-sm-8">
 				<div class="content1">
 					<h2>MONALIZA ABRIL</h2>
 					<p>After her experience in the advertising field, Mona dives in her interest for capturing the best photos that would go well
@@ -93,7 +92,7 @@
 				</div>
 			</div>
 			<div class="col-sm-4">
-				<img src="assets/img/man.jpeg" class="img-fluid">
+				<img src="assets/img/cedie.jpg" class="img-fluid">
 			</div>
 		</div>
 	</div>
