--- a/index.html
+++ b/index.html
@@ -58,11 +58,11 @@
 <section id="cover">
 	<div class="container-fluid">
 		<div class="row">
-			<div class="col-sm-12">
+			<div class="col-xs-12 col-sm-12">
 				<div class="content">
 					<img src="assets/img/coverimage.jpg" class="img-fluid">
-					<h2>Title</h2>
-					<p class="lead">This is a sample description</p>
+					<h2>What's on your plate?</h2>
+					<p class="lead">Let us satisfy your cravings for food photography.</p>
 					<a href="#"><button type="button" class="btn btn-warning btn-md" id="talktous">Talk to us</button></a>
 				</div>
 			</div>
@@ -73,7 +73,7 @@
 <section id="footer">
 	<div class="container-fluid">
 		<div class="row">
-			<div class="col-sm-12">
+			<div class="col-xs-12 col-sm-12">
 				<p>Designed by Joseph Ambrosio | Copyright &copy; 2018 - PALATE STUDIO</p>
 				<div class="icons">
 					<ul class="mx-3">
