--- a/services.html
+++ b/services.html
@@ -130,7 +130,7 @@
 					<p class="lead mb-5" id="pwywcontent">Here, we value the quality we deliver to our clients so we give them the freedom to determine if the result 
 						gets their money's worth so we implement a <span class="pwyw"><em>"Pay what you want system".</em></span> Basically, it's up to you to name the price to the project we finish for you, no questions asked.
 					</p>
-					<a href="#"><button type="button" class="btn btn-warning btn-md mb-5" id="talktous">Let's talk</button></a>
+					<a href="#contact"><button type="button" class="btn btn-warning btn-md mb-5" id="talktous">Let's talk</button></a>
 				</div>
 			</div>
 		</div>
