--- a/sampleworks.html
+++ b/sampleworks.html
@@ -67,44 +67,44 @@
 	<div class="container-fluid gallery">
 		<div class="row gallery py-3">
 			<div class="col-sm-6 col-md-6 col-lg-3">
-				<img src="assets/img/snapseed.jpeg" class="img-fluid">
+				<img src="assets/img/Snapseed.jpeg" class="img-fluid">
 			</div>
 			<div class="col-sm-6 col-md-6 col-lg-3">
 				<img src="assets/img/coverimage.jpg" class="img-fluid">
 			</div>
 			<div class="col-sm-6 col-md-6 col-lg-3">
-				<img src="assets/img/snapseed2.jpg" class="img-fluid">
+				<img src="assets/img/Snapseed2.jpg" class="img-fluid">
 			</div>
 			<div class="col-sm-6 col-md-6 col-lg-3">
-				<img src="assets/img/graham.png" class="img-fluid">
-			</div>
-		</div>
-		<div class="row gallery py-3">
-			<div class="col-sm-6 col-md-6 col-lg-3">
-				<img src="assets/img/popcorn.png" class="img-fluid">
-			</div>
-			<div class="col-sm-6 col-md-6 col-lg-3">
-				<img src="assets/img/pasta.png" class="img-fluid">
-			</div>
-			<div class="col-sm-6 col-md-6 col-lg-3">
-				<img src="assets/img/tinola.png" class="img-fluid">
-			</div>
-			<div class="col-sm-6 col-md-6 col-lg-3">
-				<img src="assets/img/laing.png" class="img-fluid">
+				<img src="assets/img/graham.PNG" class="img-fluid">
 			</div>
 		</div>
 		<div class="row gallery py-3">
 			<div class="col-sm-6 col-md-6 col-lg-3">
-				<img src="assets/img/lechon.png" class="img-fluid">
+				<img src="assets/img/popcorn.PNG" class="img-fluid">
 			</div>
 			<div class="col-sm-6 col-md-6 col-lg-3">
-				<img src="assets/img/shaka.png" class="img-fluid">
+				<img src="assets/img/pasta.PNG" class="img-fluid">
 			</div>
 			<div class="col-sm-6 col-md-6 col-lg-3">
-				<img src="assets/img/burger.png" class="img-fluid">
+				<img src="assets/img/tinola.PNG" class="img-fluid">
 			</div>
 			<div class="col-sm-6 col-md-6 col-lg-3">
-				<img src="assets/img/bfast.png" class="img-fluid">
+				<img src="assets/img/laing.PNG" class="img-fluid">
+			</div>
+		</div>
+		<div class="row gallery py-3">
+			<div class="col-sm-6 col-md-6 col-lg-3">
+				<img src="assets/img/lechon.PNG" class="img-fluid">
+			</div>
+			<div class="col-sm-6 col-md-6 col-lg-3">
+				<img src="assets/img/shaka.PNG" class="img-fluid">
+			</div>
+			<div class="col-sm-6 col-md-6 col-lg-3">
+				<img src="assets/img/burger.PNG" class="img-fluid">
+			</div>
+			<div class="col-sm-6 col-md-6 col-lg-3">
+				<img src="assets/img/bfast.PNG" class="img-fluid">
 			</div>
 		</div>
 	</div>
