--- a/sampleworks.html
+++ b/sampleworks.html
@@ -34,7 +34,7 @@
 						<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarContent" aria-controls="navbarContent" aria-expanded="false" aria-label="Toggle navigation">
 							<span class="navbar-toggler-icon"></span>
 						</button>
-						<a href="index.html"><div class="logo"><img src="assets/img/logo.png" class="img-fluid" id="imglogo">PALATE STUDIO</div></a>
+						<a href="index.html"><div class="logo"><img src="assets/img/logo.PNG" class="img-fluid" id="imglogo">PALATE STUDIO</div></a>
 						<div class="collapse navbar-collapse" id="navbarContent">
 							<ul class="navbar-nav ml-auto">
 								<li class="nav-item">
@@ -73,7 +73,7 @@
 				<img src="assets/img/coverimage.jpg" class="img-fluid">
 			</div>
 			<div class="col-sm-6 col-md-6 col-lg-3">
-				<img src="assets/img/Snapseed2.jpg" class="img-fluid">
+				<img src="assets/img/Snapseed2.JPG" class="img-fluid">
 			</div>
 			<div class="col-sm-6 col-md-6 col-lg-3">
 				<img src="assets/img/graham.PNG" class="img-fluid">
