--- a/services.html
+++ b/services.html
@@ -34,7 +34,7 @@
 						<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarContent" aria-controls="navbarContent" aria-expanded="false" aria-label="Toggle navigation">
 							<span class="navbar-toggler-icon"></span>
 						</button>
-						<a href="index.html"><div class="logo"><img src="assets/img/logo.png" class="img-fluid" id="imglogo">PALATE STUDIO</div></a>
+						<a href="index.html"><div class="logo"><img src="assets/img/logo.PNG" class="img-fluid" id="imglogo">PALATE STUDIO</div></a>
 						<div class="collapse navbar-collapse" id="navbarContent">
 							<ul class="navbar-nav ml-auto">
 								<li class="nav-item">
